--- a/css/contact.css
+++ b/css/contact.css
@@ -6,12 +6,14 @@
 } 
 
 .contact-text {                                                       /* For h1 text on the left: */
-    font-size: 2.5em;
-    margin: 0;                                                        /* ... remove margins from header ... */
+    font-weight: 500;                                                              /* ... the text is medium thickness (see imported poppins google font at top)*/                  
+    font-size: 3em;                                                                /* ... font size of 3em (remember: em is x3 the size of the default 12pt font) ... */
+    margin-bottom: 1rem;                                                           /* ... spacing on the bottom of the title for consistent padding and margins */
+    margin-top: 0;                                                       /* ... remove margins from header ... */
 }
 
 .contact-form {                                                       /* For the form styling: */
-    background-color: #202027;
+    background-color: rgba(61, 61, 31, 0.23);
     width: 50vw;                                                      /*... form will take up 50% of the view width... */
     max-width: 50%;                                                   /*... and form will have a max-width of 50% of thge view width ...*/    
     padding: 2rem 4rem;                                               /*... padding around the form content and the box...*/
@@ -36,7 +38,7 @@
 .input-group input {
     outline: none;                                                     /*... removesdefault outline ... */
     background: none;                                                  /*... removesdefault default white background color ... */
-    border: 1px solid rgb(46, 56, 82);                               /*... adds a custom thin border... */             
+    border: 1px solid rgb(185, 184, 184);                               /*... adds a custom thin border... */             
     font-size: 1em;                                                    /*... increases font size... */     
     padding: .5em;                                                     /*... increases padding in the input field... */
     border-radius: 5px;                                                                 
@@ -44,5 +46,5 @@
 }
 
 .input-group input:focus {
-    border-color: rgb(89, 109, 160);
+    border-color: rgb(214, 214, 214);
 }
